--- a/src/styles/templates/product.primary.scss
+++ b/src/styles/templates/product.primary.scss
@@ -256,7 +256,7 @@
 
       .selected-swatch-text.mobile {
         float: right;
-        margin-right: 6px;
+        margin-right: 10px;
       }
 
       .selected-swatch-text.desktop {
@@ -293,10 +293,12 @@
           font-size: 25px;
           text-align: center;
           margin-right: 6px;
+          line-height: 34px;
 
           &.selected {
+            background-color: #0090fc;
             border-color: #0090fc;
-            color: #0090fc;
+            color: white;
           }
         }
       }
@@ -704,8 +706,8 @@
     }
 
     h2 {
-      font-size: 30px;
-      padding: 0 40px;
+      font-size: 40px;
+      padding: 0 20px;
       text-align: center;
       line-height: 1;
       font-family: "neuzeitgroteskblack";
@@ -737,10 +739,6 @@
         margin: -10px;
         width: 60px;
         height: auto;
-
-        @media screen and (min-width: $large-phone) {
-          display: none;
-        }
       }
 
       h3 {
@@ -898,6 +896,7 @@
         text-align: center;
         font-family: 'Univers-BoldCn';
         letter-spacing: 2.2px;
+        font-size: 22px;
 
         &.gender {
           vertical-align: middle;
@@ -908,6 +907,11 @@
           font-family: 'neuzeitgroteskblack';
           letter-spacing: normal;
           width: 100px;
+
+          @media screen and (min-width: $tablet) {
+            font-size: 26px;
+            width: 120px;
+          }
         }
 
         &.size-name {
@@ -915,8 +919,12 @@
           background-color: #0090fc;
           border-color: #0090fc;
           font-family: 'Univers-Cn';
-          font-size: 12px;
-          letter-spacing: 1px;
+          font-size: 14px;
+          letter-spacing: normal;
+
+          @media screen and (min-width: $tablet) {
+            font-size: 18px;
+          }
         }
       }
     }
@@ -928,9 +936,9 @@
     }
 
     p {
-      font-family: neuzeit_grotesk_light;
+      font-family: 'UniversLTStd';
       font-weight: normal;
-      font-size: 15px;
+      font-size: 16px;
     }
 
     .img-wrap {
@@ -953,12 +961,12 @@
       font-family: 'neuzeitgroteskblack';
       font-size: 40px;
       margin: 0;
-      padding: 0 30px;
+      padding: 0 20px;
       text-align: center;
       line-height: 1;
 
       @media screen and (min-width: $tablet) {
-        font-size: 80px;
+        font-size: 70px;
       }
     }
 
@@ -976,6 +984,7 @@
       p {
         font-size: 20px;
         line-height: 1.3;
+        font-family: 'UniversLTStd';
 
         @media screen and (min-width: $tablet) {
           font-size: 30px;
