--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -50,6 +50,29 @@ section.hero {
     }
   }
 
+  .mobile {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 40px;
+    padding-top: 30px;
+
+    h1 {
+      font-size: 28px;
+    }
+
+    @media screen and (min-width: $tablet) {
+      display: none;
+    }
+
+    .content {
+      text-align: center;
+      margin-top: 0px;
+    }
+  }
+
   .container {
     padding: 10px;
     margin: 0;
