--- a/src/styles/templates/product.scss
+++ b/src/styles/templates/product.scss
@@ -245,8 +245,8 @@
 
       h3 {
         text-align: center;
-        color: #0090fc;
         margin-bottom: 6px;
+        font-size: 22px;
         font-family: 'neuzeitgroteskblack';
       }
 
@@ -258,8 +258,9 @@
           border-left: 1px solid #8a8a8a;
           color: #000;
           padding: 0 8px;
-          font-family: 'neuzeitgroteskblack';
-          font-size: 12px;
+          font-family: 'Univers-Cn';
+          font-size: 15px;
+          letter-spacing: 1.5px;
         }
 
         p:first-child {
