Chore: decrease spacing between hero banner and text

--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -129,6 +129,8 @@ section.hero {
 }
 
 .section.text-banner {
+  padding: 16px 24px 30px 24px;
+
   h2 {
     font-family: "neuzeitgroteskblack";
     letter-spacing: 0.1px;
