--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -475,6 +475,15 @@ section.hero {
   padding: 30px 0px;
   background-color: #f1f2f2;
 
+  h2 {
+    font-family: "neuzeitgroteskblack";
+    letter-spacing: 0.1px;
+    font-size: 32px;
+    font-weight: bold;
+    margin-bottom: 0.75em;
+    text-align: center;
+  }
+
   @media screen and (min-width: $tablet) {
     padding: 3rem 1.5rem;
   }
