Fix: hero banner should take full width

--- a/src/styles/templates/index.scss
+++ b/src/styles/templates/index.scss
@@ -23,6 +23,10 @@ section.hero {
   .item {
     position: relative;
 
+    video, img {
+      width: 100%;
+    }
+
     a.img-link {
       border: none;
       background: none;
